[project]
name = "rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium[classic-control,mujoco,other]>=1.1.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "torch>=2.7.0",
    "joblib (>=1.4.2,<2.0.0)",
    "graphviz>=0.20.3",
    "scikit-learn>=1.6.1",
    "ale-py>=0.11.0",
    "patool>=4.0.1",
    "moviepy>=2.1.2",
]
